# recEngine101

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml
backend/: README.md
frontend/: README.md  index.html  package.json  tsconfig.json
frontend/src/: App.tsx
